GenericSetup Product Changelog
==============================

GenericSetup 1.5.0 (unreleased)
-------------------------------

- tool and utils: Removed deprecated code.

- Update PropertyManagerHelpers to make it possible to remove elements from a
  property by adding a remove="True" attribute to the element. This can
  also be used to reorder elements since new elements are always added
  at the end of the list.

- Made PropertyManagerHelpers class work for non-PropertyManager objects

  o Derived classes can supply a '_PROPERTIES' scehma, which is then used
    to mock up a temporary propertysheet for the object.  The adapter's 
    methods ('_extractProperties', '_purgeProperties', '_initProperties')
    then run against that propertysheet.

- Added logic to respect the destination of upgrade steps when determining
  their applicability. 

- Enhanced the readability of the upgrades tab on the tool.

- Changed upgrade logic to set the current version after an upgrade to the
  destination version of the last step run, instead of the current profile
  version.

- Use the parse_version function from pkg_resources to normalize versions
  before comparing them inside the upgrade code. This ensures pre-release
  versions are handled correctly. Also use the normalize code when sorting
  versions on the tools ZMI upgrades page.

- Fixed the upgrade step directive schema. Description is not required.

- Introduced a new IComponentsHandlerBlacklist interface. You can register
  named utilities for it and provide sequences of interfaces which should
  not be handled by the standard components registry adapter. This allows
  more specialized export/import handlers to take full control over the
  components they care about.

- When loading multiple profiles reload the list of steps to use after
  each import. https://bugs.launchpad.net/zope-cmf/+bug/213905


GenericSetup 1.4.0 (2008-03-23)
-------------------------------
